fixed slider overflow issue

--- a/css/livecode.css
+++ b/css/livecode.css
@@ -21,7 +21,6 @@ footer > p {
 }
 
 .plot {
-  height: 50%;
   margin: 5px;
   color: #1C2541;
 }
@@ -141,7 +140,7 @@ footer > p {
 }
 
 #errors {
-  grid-column: 1 / 3;
+  grid-area: 3 / 1 / 4 / 3;
   overflow: hidden;
 }
 
